페이지 수정

--- a/spring-petclinic-main/src/main/resources/templates/error.html
+++ b/spring-petclinic-main/src/main/resources/templates/error.html
@@ -3,9 +3,18 @@
 <html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'error')}">
 
   <body>
-    <img src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
-    <h2>Something happened...</h2>
-    <p th:text="${message}">Exception message</p>
+  	<div class="nftWrap">
+	    <img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft1.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft2.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft3.png}"/>	
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft4.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft5.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft6.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft7.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft8.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+		<img src="../static/resources/images/pets.png" th:src="@{/resources/images/nft9.png}"/>
+  	</div>
   </body>
 
 </html>
