--- a/spring-petclinic-main/src/main/resources/static/resources/css/petclinic.css
+++ b/spring-petclinic-main/src/main/resources/static/resources/css/petclinic.css
@@ -1353,7 +1353,7 @@ progress {
   border-color: #dee2e6; }
   .table > :not(caption) > * > * {
     padding: 0.5rem 0.5rem;
-    background-color: var(--bs-table-bg);
+    background-color: #ffffff;
     border-bottom-width: 1px;
     box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg); }
   .table > tbody {
@@ -7900,7 +7900,7 @@ body, h1, .h1, h2, .h2, h3, .h3, p, input {
   margin: 0;
   font-weight: 400;
   font-family: "varela_roundregular", sans-serif;
-  color: #34302d; }
+  color: #ffffff; }
 
 h1, .h1 {
   font-size: 24px;
@@ -8020,6 +8020,12 @@ strong {
 	left: 50%;
 	transform: translate(-50%, -50%);
 	font-family: 'Noto Sans KR', sans-serif;
-	font-weight: 500;
+	font-weight: 500;}
+  .nftWrap{
+	float: left;
+	}
+  .nftWrap > img{
+	margin: 10px;
+	width : 450px;
 }
 /*# sourceMappingURL=../../../../../../target/petclinic.css.map */
