--- a/spring-petclinic-main/src/main/resources/templates/fragments/layout.html
+++ b/spring-petclinic-main/src/main/resources/templates/fragments/layout.html
@@ -45,25 +45,24 @@
 
         <ul class="nav navbar-nav me-auto">
 
-          <li th:replace="::menuItem ('/','home','home page','home','home')">
-            <span class="fa fa-home" aria-hidden="true"></span>
-            <span>Home</span>
+          <li th:replace="::menuItem ('/','home','home page','home','HOME')">
+            <span class="fa fa-home" aria-hidden="true"></span> 
+            <span> home </span>
           </li>
 
-          <li th:replace="::menuItem ('/owners/find','owners','find owners','search','exchange')">
+          <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find/Add Exchange')">
             <span class="fa fa-search" aria-hidden="true"></span>
             <span>Find owners</span>
           </li>
 
-          <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','NFT')">
+          <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Exchange-list')">
             <span class="fa fa-th-list" aria-hidden="true"></span>
             <span>Veterinarians</span>
           </li>
 
           <li
-            th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','exclamation-triangle','
-Service center')">
-            <span class="fa exclamation-triangle" aria-hidden="true"></span>
+            th:replace="::menuItem ('/oups','error','trigger a RuntimeException to see how it is handled','exclamation-triangle','NFT')">
+            <span class="fa fa-picture-o" aria-hidden="true"></span>
             <span>Error</span>
           </li>
 
