--- a/spring-petclinic-main/src/main/resources/templates/owners/ownerDetails.html
+++ b/spring-petclinic-main/src/main/resources/templates/owners/ownerDetails.html
@@ -6,7 +6,7 @@
   <body>
   
   
-    <h2>Owner Information</h2>
+    <h2>Exchange Information</h2>
   
   
     <table class="table table-striped" th:object="${owner}">
@@ -29,14 +29,14 @@
     </table>
   
     <a th:href="@{{id}/edit(id=${owner.id})}" class="btn btn-primary">Edit
-      Owner</a>
+      </a>
     <a th:href="@{{id}/pets/new(id=${owner.id})}" class="btn btn-primary">Add
-      New Pet</a>
+      New </a>
   
     <br />
     <br />
     <br />
-    <h2>Pets and Visits</h2>
+    <h2>Visits</h2>
   
     <table class="table table-striped">
   
