--- a/spring-petclinic-main/src/main/resources/templates/owners/ownersList.html
+++ b/spring-petclinic-main/src/main/resources/templates/owners/ownersList.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<h2>Owners</h2>
+<h2>Exchange</h2>
 
 <table id="owners" class="table table-striped">
   <thead>
@@ -13,7 +13,7 @@
     <th style="width: 200px;">Address</th>
     <th>City</th>
     <th style="width: 120px">Telephone</th>
-    <th>Pets</th>
+    <th>feature</th>
   </tr>
   </thead>
   <tbody>
