--- a/spring-petclinic-main/src/main/resources/templates/vets/vetList.html
+++ b/spring-petclinic-main/src/main/resources/templates/vets/vetList.html
@@ -5,13 +5,13 @@
 
 <body>
 
-<h2>Veterinarians</h2>
+<h2>Exchange-List</h2>
 
 <table id="vets" class="table table-striped">
   <thead>
   <tr>
     <th>Name</th>
-    <th>Specialties</th>
+    <th>feature</th>
   </tr>
   </thead>
   <tbody>
